# ARES

./: README.md  datos.txt  experimento.argos  loop_exprimentalgenerator.py  output.txt  posiciones.txt  processing_data.py  sub_experimental.py
Experimentos/: datos.csv  datos.txt  posiciones.txt
Reporte-Resultados/: marcha_final.tpl  reporte_mision3.html
Software-control/: A_obstacleAvoiddance_sta.lua  A_pattern_formation_flocking.lua  B_pattern_formation.lua  aggregation_0_rb_taxis.lua  aggregation_spots.lua  aggregation_spots_GMadro.lua  color_selection_det.lua  color_selection_prob.lua  obstacleAvoidance_Gmadro.lua  obstacleAvoidance_ROS2SWARM.lua  obstacleAvoiddance_vec.lua  pattern_formation.lua  pattern_formation_circle.lua  pattern_formation_flocking.lua  synchronization.lua
Software-control/Utils-functions/: scan_calculation_functions.lua
src/: CMakeLists.txt  loop_function.cpp  loop_function.h
